yeti/redis/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: yeti-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: yeti-redis
  template:
    metadata:
      labels:
        name: yeti-redis
    spec:
      containers:
        - image: image_prefix:redis
          name: yeti-redis
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
      restartPolicy: Always
